update the doc for dump-segment tool when using jdk11+